@@ -1,3 +1,8 @@
+1998-06-03  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* gnome-mdi.c: major cleanup of gnome-mdi code. looks much better
+	now ;)
+	
 1998-06-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* gnome-mdi.[ch]: added gnome_mdi_set_document_[menu|list]_path()
